<resources>
    <string name="app_name">GitHub commit viewer</string>
    <string name="github_repo_name_prompt">Github repo name</string>
    <string name="github_repo_owner_prompt">Github repo owner</string>
    <string name="repo_lookup_button">Fetch</string>
    <string name="back_button_description">go back to previous activity</string>
    <string name="text_view_placeholder">placeholder</string>
    <string name="loading">Loading…</string>
    <string name="author_label">Author:</string>
    <string name="date_label">Date:</string>
    <string name="message_label">Message:</string>
    <string name="verified_label">Verified:</string>
    <string name="files_label">Files</string>
    <string name="details_label">Details</string>
    <string name="current_file_label">Current file:</string>
    <string name="github_personal_access_token_prompt">Github personal access token:</string>
</resources>