<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Repo name field-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/github_repo_name_field"
                android:text="@string/github_repo_name_prompt" />

            <EditText
                android:id="@+id/github_repo_name_field"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="text" />

        </LinearLayout>

        <!-- Repo owner field-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/github_repo_owner_field"
                android:text="@string/github_repo_owner_prompt" />

            <EditText
                android:id="@+id/github_repo_owner_field"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

        <!-- Button -->
        <Button
            android:id="@+id/repo_lookup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repo_lookup_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>